clippy fixes, bug in color parsing

--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ Button {
 }
 
 *:hover {
-    background: #00008f;
+    background: #00cc8f;
 }
 
 Root {
